--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("normalize.min.css");
 @font-face {
   font-family: "ArialMT";
@@ -697,7 +696,8 @@ div {
 
 .prolific_filter_item .ui-button,
 .filter_input_wrapper .ui-button,
-.prolific_analytical_categores_filter_wrp .ui-button {
+.prolific_analytical_categores_filter_wrp .ui-button,
+.main_title_prolific_filter_wrp .ui-button {
   background: none;
   margin: 0;
   border: none;
@@ -716,7 +716,9 @@ div {
 .filter_input_wrapper .ui-button:hover,
 .filter_input_wrapper .ui-button:focus,
 .prolific_analytical_categores_filter_wrp .ui-button:hover,
-.prolific_analytical_categores_filter_wrp .ui-button:focus {
+.prolific_analytical_categores_filter_wrp .ui-button:focus,
+.main_title_prolific_filter_wrp .ui-button:hover,
+.main_title_prolific_filter_wrp .ui-button:focus {
   outline: none;
   color: #000;
   border: 1px solid #e6e6e6;
@@ -726,13 +728,16 @@ div {
 .filter_input_wrapper .ui-button:hover .ui-icon,
 .filter_input_wrapper .ui-button:focus .ui-icon,
 .prolific_analytical_categores_filter_wrp .ui-button:hover .ui-icon,
-.prolific_analytical_categores_filter_wrp .ui-button:focus .ui-icon {
+.prolific_analytical_categores_filter_wrp .ui-button:focus .ui-icon,
+.main_title_prolific_filter_wrp .ui-button:hover .ui-icon,
+.main_title_prolific_filter_wrp .ui-button:focus .ui-icon {
   background-image: none;
 }
 
 .prolific_filter_item .ui-selectmenu-text,
 .filter_input_wrapper .ui-selectmenu-text,
-.prolific_analytical_categores_filter_wrp .ui-selectmenu-text {
+.prolific_analytical_categores_filter_wrp .ui-selectmenu-text,
+.main_title_prolific_filter_wrp .ui-selectmenu-text {
   color: #cc003d;
   font-family: TrebuchetMSBold, sans-serif;
   font-size: 14px;
@@ -743,7 +748,8 @@ div {
 
 .prolific_filter_item .placeholder,
 .filter_input_wrapper .placeholder,
-.prolific_analytical_categores_filter_wrp .placeholder {
+.prolific_analytical_categores_filter_wrp .placeholder,
+.main_title_prolific_filter_wrp .placeholder {
   color: #000;
   font-family: TrebuchetMS, sans-serif;
   vertical-align: middle;
@@ -753,14 +759,16 @@ div {
 
 .prolific_filter_item .ui-selectmenu-button-open,
 .filter_input_wrapper .ui-selectmenu-button-open,
-.prolific_analytical_categores_filter_wrp .ui-selectmenu-button-open {
+.prolific_analytical_categores_filter_wrp .ui-selectmenu-button-open,
+.main_title_prolific_filter_wrp .ui-selectmenu-button-open {
   -webkit-border-radius: 3px 3px 0 0;
           border-radius: 3px 3px 0 0;
 }
 
 .prolific_filter_item .ui-selectmenu-icon.ui-icon,
 .filter_input_wrapper .ui-selectmenu-icon.ui-icon,
-.prolific_analytical_categores_filter_wrp .ui-selectmenu-icon.ui-icon {
+.prolific_analytical_categores_filter_wrp .ui-selectmenu-icon.ui-icon,
+.main_title_prolific_filter_wrp .ui-selectmenu-icon.ui-icon {
   width: 0;
   height: 0;
   background-image: none;
@@ -777,7 +785,8 @@ div {
 
 .prolific_filter_item .ui-selectmenu-icon.ui-icon:hover,
 .filter_input_wrapper .ui-selectmenu-icon.ui-icon:hover,
-.prolific_analytical_categores_filter_wrp .ui-selectmenu-icon.ui-icon:hover {
+.prolific_analytical_categores_filter_wrp .ui-selectmenu-icon.ui-icon:hover,
+.main_title_prolific_filter_wrp .ui-selectmenu-icon.ui-icon:hover {
   background-image: none;
 }
 
@@ -2403,21 +2412,383 @@ div {
   display: none;
 }
 
-/*========================
-	@Media запросы
-	@mixin =======================*/
-@media only screen and (max-width: 1280px) {
-  /**/
+.main_title_prolific_filter_wrp {
+  margin-top: 30px;
 }
 
-@media only screen and (max-width: 992px) {
-  /**/
+.main_title_prolific_filter_wrp .ui-button {
+  width: 405px;
 }
 
-@media only screen and (max-width: 768px) {
-  /**/
+.mt_title_prolific {
+  margin-bottom: 40px;
 }
 
-@media only screen and (max-width: 480px) {
-  /**/
+.prolific_result_graphic_wrp {
+  width: 810px;
+  padding: 46px 33px 42px 33px;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.prolific_result_graphic_wrp img {
+  margin-bottom: 33px;
+}
+
+.prolific_result_graphic_wrp p {
+  font-size: 14px;
+  color: #000;
+  font-family: TrebuchetMS, sans-serif;
+  text-align: center;
+}
+
+.prolific_result_graphic_wrp p span {
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 22px;
+  color: #cc003d;
+  display: block;
+  padding-top: 3px;
+}
+
+.prolific_result_graphic_speedmentr_wrp {
+  width: 276px;
+}
+
+.prolific_result_graphic {
+  width: 438px;
+  height: 273px;
+  padding: 0 40px;
+  border-bottom: 1px solid #e6e6e6;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.prolific_result_graphic_item {
+  width: 75px;
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
+  position: relative;
+}
+
+.prolific_result_graphic_item:not(:last-of-type) {
+  margin-right: 65px;
+}
+
+.prolific_result_graphic_item .prolific_result_graphic_item_fill {
+  width: 100%;
+  height: 100%;
+  background-color: #001689;
+}
+
+.prolific_result_graphic_item .fill_blue {
+  opacity: .3;
+}
+
+.prolific_result_graphic_item .fill_opacity_blue {
+  opacity: .1;
+}
+
+.prolific_result_graphic_item .fill_pink {
+  background-color: #FAE5EB;
+}
+
+.prolific_result_graphic_item .prolific_result_graphic_item_procent {
+  position: absolute;
+  left: 50%;
+  top: -18px;
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 22px;
+  color: #001689;
+  text-align: center;
+}
+
+.prolific_result_graphic_item .prolific_result_graphic_item_name {
+  position: absolute;
+  text-align: center;
+  left: 50%;
+  bottom: -18px;
+  -webkit-transform: translate(-50%, 100%);
+      -ms-transform: translate(-50%, 100%);
+          transform: translate(-50%, 100%);
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  line-height: 18px;
+  color: #a1a4c8;
+  text-transform: uppercase;
+}
+
+.prolific_result {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 45px;
+}
+
+.prolific_result_right {
+  width: 258px;
+}
+
+.prolific_result_right h3 {
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  margin-bottom: 29px;
+}
+
+.prolific_result_right p {
+  font-family: TrebuchetMS, sans-serif;
+  font-size: 14px;
+  color: #a2a2a2;
+  margin-bottom: 20px;
+}
+
+.prolific_result_right a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  color: #000;
+}
+
+.prolific_result_right a img {
+  margin-right: 10px;
+}
+
+.prolific_result_right a span {
+  font-family: TrebuchetMS, sans-serif;
+  font-size: 14px;
+}
+
+.prolific_dinamic_graphic {
+  padding: 25px 30px;
+  background-color: #fff;
+}
+
+.prolific_dinamic_graphic_description ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.prolific_dinamic_graphic_description ul li {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 25px;
+}
+
+.prolific_dinamic_graphic_description ul li span {
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+}
+
+.prolific_dinamic_graphic_description ul li .circle {
+  width: 13px;
+  height: 13px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: #001689;
+  margin-right: 8px;
+  margin-top: -2px;
+}
+
+.prolific_dinamic_graphic_description ul li .circle_blue {
+  opacity: .3;
+}
+
+.prolific_dinamic_graphic_description ul li .circle_opacity_blue {
+  opacity: .1;
+}
+
+.prolific_dinamic_graphic_description ul li .circle_pink {
+  background-color: #FAE5EB;
+}
+
+.prolific_dinamic_graphic_item {
+  width: 207px;
+  margin-top: 70px;
+}
+
+.prolific_dinamic_graphic_item_row {
+  height: 289px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  display: flex;
+}
+
+.prolific_dinamic_graphic_item_row ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
+  height: 261px;
+}
+
+.prolific_dinamic_graphic_item_row ul li {
+  width: 30px;
+  position: relative;
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
+}
+
+.prolific_dinamic_graphic_item_row ul li:not(:last-of-type) {
+  margin-right: 10px;
+}
+
+.prolific_dinamic_graphic_item_row ul li .fill_blue {
+  opacity: .3;
+}
+
+.prolific_dinamic_graphic_item_row ul li .fill_opacity_blue {
+  opacity: .1;
+}
+
+.prolific_dinamic_graphic_item_row ul li .fill_pink {
+  background-color: #FAE5EB;
+}
+
+.prolific_dinamic_graphic_item_row__procent {
+  position: absolute;
+  top: -6px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  text-align: center;
+  font-size: 18px;
+  color: #001689;
+  font-family: PragmaticaSlabBold, sans-serif;
+}
+
+.prolific_dinamic_graphic_item_row__fill {
+  width: 100%;
+  height: 100%;
+  background-color: #001689;
+}
+
+.prolific_dinamic_graphic_item_name {
+  width: 100%;
+  padding: 19px 0 12px 0;
+  text-align: center;
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #a1a4c8;
+  border-top: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+}
+
+.prolific_dinamic_graphic_items {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
+.not_go {
+  line-height: 289px;
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  color: #cc003d;
+  background-image: url(../img/bg_not.png);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover;
+}
+
+.not_go_wrp {
+  width: 210px;
+}
+
+.prolific_dinamic_graphic_item_row_category {
+  text-align: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.prolific_dinamic_graphic_item_row_category p {
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 14px;
+  color: #001689;
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
+  margin-bottom: 7px;
+}
+
+.prolific_dinamic_graphic_item_row_category .catecory_circle {
+  width: 30px;
+  height: 30px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: #e5e7f3;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: 56px;
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 20px;
+  color: #fff;
+}
+
+.prolific_dinamic_graphic_item_row_category .catecory_circle_1 {
+  width: 42px;
+  height: 42px;
+  background-color: #b2b9db;
+  line-height: 42px;
+  bottom: 94px;
+}
+
+.prolific_dinamic_graphic_item_row_category .catecory_circle_2 {
+  width: 54px;
+  height: 54px;
+  line-height: 54px;
+  bottom: 137px;
+  background-color: rgba(0, 22, 137, 0.6);
+}
+
+.prolific_dinamic {
+  margin-bottom: 45px;
 }
