--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1773,3 +1773,400 @@ div
 
 .prolific_dinamic
 	margin-bottom: 45px
+
+.prolific_tab_worker_nuv
+	display: flex
+	.prolific_tab_worker_nuv__active
+		a
+			background-color: #fff
+			svg
+				path
+					fill: $blue
+			span
+				color: $blue
+	li
+		width: 275px
+		position: relative
+		&:not(:last-of-type)
+			&:before
+				content: ''
+				display: block
+				width: 1px
+				height: 100%
+				background-color: #c2c2c2
+				position: absolute
+				right: 0
+				top: 0
+				bottom: 0
+		&:first-child
+			a
+				border-left-top-radius: 3px
+		&:last-child
+			a
+				border-right-top-radius: 3px
+		a
+			text-decoration: none
+			display: flex
+			align-items: center
+			justify-content: center
+			height: 100%
+			padding: 12px 20px
+			background-color: #EAEAF0
+			transition: $tr
+			&:before
+				content: ''
+				display: block
+				width: 1px
+				height: 100%
+				background-color: transparent
+				position: absolute
+				left: -1px
+				top: 0
+				bottom: 0
+			&:hover
+				position: relative
+				background-color: #fff
+				&:before
+					background-color: #fff
+				svg
+					path
+						fill: $blue
+				span
+					color: $blue
+			svg
+				margin-right: 7px
+				path
+					fill: #a4a4bb
+			span
+				font-family: TrebuchetMS, sans-serif
+				font-size: 16px
+				color: #a4a4bb
+
+.prolific_tab_worker__categories
+	display: flex
+	justify-content: space-between
+
+.prolific_tab_worker__categories_left
+	min-height: 296px
+	padding-top: 26px
+
+.prolific_tab_worker_content
+	background-color: #fff
+
+.prolific_tab_worker__categories_left
+	width: 827px
+
+.prolific_tab_worker__categories
+	padding: 48px 33px 61px 33px
+
+.prolific_tab_worker__categories_craphic_mask
+	position: absolute
+	width: 827px
+	padding-left: 96px
+	ul
+		display: flex
+		flex-direction: column
+		li
+			height: 98px
+			position: relative
+			border-top: 1px solid #e6e6e6
+			&:last-child
+				border-bottom: 1px solid #e6e6e6
+			span
+				font-family: ArialMT, sans-serif
+				font-size: 13px
+				text-transform: uppercase
+				color: #a1a4c8
+				line-height: 18px	
+				display: block
+				width: 96px
+				height: 100%
+				line-height: 98px
+				background-color: #fff
+				left: -31px
+				top: 0
+				bottom: 
+				transform: translateX(-100%)
+
+.prolific_tab_worker__categories_craphic_items
+	display: flex
+	margin-left: 200px
+
+.prolific_tab_worker__categories_craphic_item
+	width: 150px
+	&_fill_wrp
+		height: 294px
+		width: 100%
+		position: relative
+		font-family: PragmaticaSlabBold, sans-serif
+		display: flex
+		.fill_bottom
+			bottom: 0
+			left: 0
+			right: 0
+		.fill_center
+			left: 0
+			right: 0
+			top: 98px
+		.fill_top
+			left: 0
+			right: 0
+			top: 0
+		.prolific_tab_worker__categories_craphic_item_fill
+			height: 98px
+			width: 100%
+			display: flex
+			align-items: center
+			text-align: center
+			position: absolute
+			font-size: 14px
+			padding: 5px
+			line-height: 16px
+	.fill_opacity_blue
+		background-color: #E6E8F3
+	.fill_blue
+		background-color: #99a2d0
+	.fill_pink
+		background-color: #fae5eb
+		color: $blue
+	&_name
+		margin-top: 30px
+		font-family: ArialMT, sans-serif
+		font-size: 12px
+		color: #c6c6c6
+		text-align: center
+		line-height: 18px
+
+.prolific_tab_worker__categories_craphic_desription
+	li
+		display: flex
+		.circle
+			display: block
+			width: 13px
+			height: 13px
+			border-radius: 50%
+			background-color: #fae5eb
+			margin-right: 13px
+		span
+			font-family: ArialMT, sans-serif
+			font-size: 14px
+			line-height: 18px
+
+.prolific_tab_worker__categories_right
+	margin-right: 10px
+
+.prolific_tab_worker__result_test
+	overflow: hidden
+	padding: 48px 32px 62px 22px
+	display: flex
+	justify-content: space-between
+
+.prolific_tab_worker__result_test_left
+	width: 860px
+	.prolific_tab_worker__result_test_left_title
+		font-family: ArialMT, sans-serif
+		font-size: 14px
+		line-height: 18px
+		color: #c6c6c6
+		text-align: center
+		display: block
+		width: 50px
+		margin-bottom: 32px
+		position: relative
+		z-index: 5
+
+.prolific_tab_worker__result_test_graphic
+	height: 207px
+	position: relative
+	margin-left: 14px
+	&-numbar
+		position: absolute
+		width: 100%
+		height: 340px
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+		bottom: 0
+		left: 0
+		right: 0
+		li.prolific_tab_worker__result_test_graphic-numbar-last
+			position: absolute
+			bottom: 0
+			left: 0
+			right: 0
+			&:before
+				bottom: 0
+				top: auto
+			span
+				position: absolute
+				bottom: 0
+				left: 0
+				transform: translateY(50%)
+		.red_line
+			position: absolute
+			width: 100%
+			height: auto
+			left: 0
+			right: 0
+			padding-bottom: 2px 
+			border-bottom: 3px solid $red
+			text-align: right
+			span
+				transform: none
+				position: relative
+				z-index: 2
+				font-family: PragmaticaSlabBold, sans-serif
+				font-size: 16px
+				color: $red
+			&:before
+				display: none
+		li
+			position: relative
+			height: 20%
+			&:after
+				content: ''
+				display: block
+				position: absolute
+				left: 0
+				top: 0
+				bottom: 0
+				height: 100%
+				width: 31px
+				background-color: #fff
+			&:before
+				content: ''
+				display: block
+				width: 100%
+				height: 1px
+				background-color: #e6e6e6
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+			span
+				display: inline-block
+				font-family: PragmaticaSlabExtraLight, sans-serif
+				font-size: 20px
+				color: #c6c6c6
+				position: relative
+				padding-right: 10px
+				transform: translateY(-50%)
+				z-index: 9
+
+.prolific_tab_worker__result_test_graphic-items
+	position: absolute
+	z-index: 3
+	height: 340px
+	left: 144px
+	bottom: 0
+	right: 0
+	display: flex
+	align-items: flex-end
+	.fll_opacity_blue
+		background-color: rgba(0, 22, 137, 0.1)
+	.fll_pink
+		background-color: rgba(204,0,61,.1)
+	li
+		width: 85px
+		position: relative
+		&:not(:last-of-type)
+			margin-right: 91px
+		.procent_prolific_result_test_graphic
+			text-align: center
+			text-transform: uppercase
+			color: #001689
+			line-height: 19px
+			position: absolute
+			top: -15px
+			left: 50%
+			transform: translate(-50%, -100%)
+			font-size: 24px
+			font-family: PragmaticaSlabBold, sans-serif
+		.name_prolific_result_test_graphic
+			text-align: center
+			line-height: 18px
+			position: absolute
+			bottom: -20px
+			left: 50%
+			transform: translate(-50%, 100%)
+			font-family: ArialMT, sans-serif
+			font-size: 12px
+			color: #c6c6c6
+			width: 94px
+
+.prolific_crapchic_right_description_block__top
+	margin-bottom: 20px
+	ul
+		li
+			display: flex
+			&:not(:last-of-type)
+				margin-bottom: 12px
+			.circle
+				width: 13px
+				height: 13px
+				border-radius: 50%
+				margin-right: 17px
+			.circle_opacity_blue
+				background-color: rgba(0, 22, 137, 0.1)
+			.circle_pink
+				background-color: rgba(204, 0, 61, 0.1)
+			.text
+				display: block
+				font-family: ArialMT, sans-serif
+				font-size: 14px
+				line-height: 18px
+				color: #000
+				margin-top: -1px
+
+.prolific_crapchic_right_description_block__bottom
+	ul
+		li
+			margin-bottom: 18px
+			span
+				font-family: PragmaticaSlabBold, sans-serif
+				font-size: 24px
+				color: $blue
+				display: block
+				margin-bottom: 2px
+			.red
+				color: $red
+				font-size: 16px
+			p
+				font-family: ArialMT, sans-serif
+				font-size: 12px
+				line-height: 18px
+
+.prolific_tab_worker__assessment_head
+	padding: 39px 56px 34px 30px
+	&_top
+		margin-bottom: 30px
+		display: flex
+		align-items: center
+		margin-bottom: 30px
+		img
+			align-self: flex-start
+			margin-right: 14px
+		p
+			font-family: ArialMT, sans-serif
+			font-size: 14px
+			line-height: 18px
+			color: #2f2f2f
+
+.prolific_tab_worker__assessment_head_bottom
+	h2
+		font-weight: normal
+		font-family: ArialMT, sans-serif
+		font-size: 22px
+		color: #000
+		margin-bottom: 10px
+		span
+			font-family: PragmaticaSlabBold, sans-serif
+			font-size: 21px
+			color: $red
+			display: inline-block
+			margin-top: -2px
+	p
+		font-family: ArialMT, sans-serif
+		font-size: 14px
+		line-height: 18px
+		color: #2f2f2f
