--- a/css/main.css
+++ b/css/main.css
@@ -3087,6 +3087,9 @@ div {
 .prolific_tab_worker__result_test {
   overflow: hidden;
   padding: 48px 32px 62px 22px;
+}
+
+.prolific_tab_worker__result_test_flex {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -3410,4 +3413,259 @@ div {
   font-size: 14px;
   line-height: 18px;
   color: #2f2f2f;
+}
+
+.prolific_tab_worker__effectivenessy {
+  padding: 53px 21px 34px 28px;
+}
+
+.prolific_tab_worker__effectivenessy_left {
+  width: 231px;
+}
+
+.prolific_tab_worker__effectivenessy_left > h4 {
+  color: #a1a4c8;
+  font-family: ArialMT, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+.prolific_tab_worker__effectivenessy_left .circle {
+  width: 97px;
+  height: 97px;
+  border: 1px solid #d9d9d9;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  text-align: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 13px;
+}
+
+.prolific_tab_worker__effectivenessy_left .circle span {
+  font-family: TrebuchetMS, sans-serif;
+  font-size: 14px;
+  color: #7e7e7e;
+}
+
+.prolific_tab_worker__effectivenessy_left .circle span span {
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 22px;
+  color: #cc003d;
+  display: block;
+}
+
+.prolific_tab_worker__effectivenessy_left > p {
+  font-family: TrebuchetMS, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: #a2a2a2;
+  text-align: center;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_items_wrp {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_items_wrp:not(:last-of-type) {
+  margin-bottom: 70px;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_items {
+  min-width: 774px;
+  height: 288px;
+  position: relative;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_items_inner_wrap {
+  width: 100%;
+  height: 807px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_items_inner_wrap .red_line {
+  position: absolute;
+  width: 100%;
+  right: 0;
+  left: 0;
+  border-bottom: 3px solid #cc003d;
+  padding-bottom: 3px;
+  text-align: right;
+  font-family: PragmaticaSlabBold, sans-serif;
+  color: #cc003d;
+  font-size: 16px;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item {
+  width: 128px;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item:first-child .prolific_tab_worker__effectivenessy_graphic_item_bottom ul li {
+  border-left: 1px solid #e6e6e6;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_fill {
+  width: 30px;
+  position: relative;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item .fill_opacity_blue {
+  background-color: #B2B9DC;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item .prolific_tab_worker__effectivenessy_graphic_item_procent {
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 18px;
+  color: #001689;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item .zero {
+  color: #cc003d;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_bottom {
+  width: 100%;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_bottom ul li {
+  padding: 17px 0 8px 0;
+  font-family: ArialMT, sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  border-top: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_bottom ul .month {
+  font-size: 12px;
+  color: #a1a4c8;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_bottom ul .procent {
+  font-size: 14px;
+  color: #b6b6b6;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_bottom ul .bad_procent {
+  color: #cc003d;
+}
+
+.prolific_tab_worker__effectivenessy_graphic_item_bottom ul .good_procent {
+  color: #001689;
+}
+
+.prolific_tab_worker__effectivenessy_description_wrp {
+  width: 100%;
+  margin-top: 27px;
+}
+
+.prolific_tab_worker__effectivenessy_description_wrp .show_description_prlific_tab_worker_active img {
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
+.prolific_tab_worker__effectivenessy_description_wrp button {
+  outline: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 7px;
+}
+
+.prolific_tab_worker__effectivenessy_description_wrp button span {
+  margin-right: 4px;
+  text-decoration: underline;
+  color: #001689;
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+}
+
+.prolific_tab_worker__effectivenessy_description_wrp button img {
+  -webkit-transform-origin: center;
+      -ms-transform-origin: center;
+          transform-origin: center;
+  -webkit-transform: rotate(-180deg);
+      -ms-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+
+.prolific_tab_worker__effectivenessy_description {
+  display: none;
+}
+
+.prolific_tab_worker__effectivenessy_description li {
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000;
+}
+
+.prolific_tab_worker__effectivenessy,
+.prolific_tab_worker__assessment_head,
+.prolific_tab_worker__result_test {
+  display: none;
 }
