--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1958,6 +1958,8 @@ div
 .prolific_tab_worker__result_test
 	overflow: hidden
 	padding: 48px 32px 62px 22px
+
+.prolific_tab_worker__result_test_flex
 	display: flex
 	justify-content: space-between
 
@@ -2170,3 +2172,158 @@ div
 		font-size: 14px
 		line-height: 18px
 		color: #2f2f2f
+
+.prolific_tab_worker__effectivenessy
+	padding: 53px 21px 34px 28px
+
+.prolific_tab_worker__effectivenessy_left
+	width: 231px
+	&>h4
+		color: #a1a4c8
+		font-family: ArialMT, sans-serif
+		font-size: 13px
+		line-height: 18px
+		text-transform: uppercase
+		margin-bottom: 15px
+	.circle
+		width: 97px
+		height: 97px
+		border: 1px solid #d9d9d9
+		border-radius: 50%
+		text-align: center
+		align-items: center
+		justify-content: center
+		display: flex
+		margin: 0 auto
+		margin-bottom: 13px
+		span
+			font-family: TrebuchetMS, sans-serif
+			font-size: 14px
+			color: #7e7e7e
+			span
+				font-family: PragmaticaSlabBold, sans-serif
+				font-size: 22px
+				color: $red
+				display: block
+	&>p
+		font-family: TrebuchetMS, sans-serif
+		font-size: 14px
+		line-height: 18px
+		color: #a2a2a2
+		text-align: center
+
+.prolific_tab_worker__effectivenessy_graphic_items_wrp
+	display: flex
+	justify-content: space-between
+	flex-wrap: wrap
+	overflow: hidden
+	&:not(:last-of-type)
+		margin-bottom: 70px
+
+.prolific_tab_worker__effectivenessy_graphic_items
+	min-width: 774px
+	height: 288px
+	position: relative
+
+.prolific_tab_worker__effectivenessy_graphic_items_inner_wrap
+	width: 100%
+	height: 807px
+	position: absolute
+	left: 0
+	bottom: 0
+	right: 0
+	display: flex
+	.red_line
+		position: absolute
+		width: 100%
+		right: 0
+		left: 0
+		border-bottom: 3px solid $red
+		padding-bottom: 3px
+		text-align: right
+		font-family: PragmaticaSlabBold, sans-serif
+		color: $red
+		font-size: 16px
+
+.prolific_tab_worker__effectivenessy_graphic_item
+	width: 128px
+	height: 100%
+	display: flex
+	justify-content: flex-end
+	flex-direction: column
+	flex-wrap: wrap
+	align-items: center
+	&:first-child
+		.prolific_tab_worker__effectivenessy_graphic_item_bottom
+			ul
+				li
+					border-left: 1px solid #e6e6e6
+	&_fill
+		width: 30px
+		position: relative
+	.fill_opacity_blue
+		background-color: #B2B9DC
+	.prolific_tab_worker__effectivenessy_graphic_item_procent
+		position: absolute
+		top: -10px
+		left: 50%
+		transform: translate(-50%, -100%)
+		font-family: PragmaticaSlabBold, sans-serif
+		font-size: 18px
+		color: $blue
+	.zero
+		color: $red
+	&_bottom
+		width: 100%
+		ul
+			li
+				padding: 17px 0 8px 0
+				font-family: ArialMT, sans-serif
+				text-transform: uppercase
+				text-align: center
+				border-top: 1px solid #e6e6e6
+				border-right: 1px solid #e6e6e6
+			.month
+				font-size: 12px
+				color: #a1a4c8
+			.procent
+				font-size: 14px
+				color: #b6b6b6
+			.bad_procent
+				color: $red
+			.good_procent
+				color: $blue
+
+.prolific_tab_worker__effectivenessy_description_wrp
+	width: 100%
+	margin-top: 27px
+	.show_description_prlific_tab_worker_active
+		img
+			transform: rotate(0deg)
+	button
+		outline: none
+		display: flex
+		align-items: center
+		margin-bottom: 7px
+		span
+			margin-right: 4px
+			text-decoration: underline
+			color: $blue
+			font-family: ArialMT, sans-serif
+			font-size: 14px
+		img
+			transform-origin: center
+			transform: rotate(-180deg)
+
+.prolific_tab_worker__effectivenessy_description
+	display: none
+	li
+		font-family: ArialMT, sans-serif
+		font-size: 14px
+		line-height: 24px
+		color: #000
+
+.prolific_tab_worker__effectivenessy,
+.prolific_tab_worker__assessment_head,
+.prolific_tab_worker__result_test
+	display: none
