--- a/css/main.css
+++ b/css/main.css
@@ -697,7 +697,9 @@ div {
 .prolific_filter_item .ui-button,
 .filter_input_wrapper .ui-button,
 .prolific_analytical_categores_filter_wrp .ui-button,
-.main_title_prolific_filter_wrp .ui-button {
+.main_title_prolific_filter_wrp .ui-button,
+.wrp_filter_months .ui-button,
+.wrp_filter_table_date .ui-button {
   background: none;
   margin: 0;
   border: none;
@@ -718,7 +720,11 @@ div {
 .prolific_analytical_categores_filter_wrp .ui-button:hover,
 .prolific_analytical_categores_filter_wrp .ui-button:focus,
 .main_title_prolific_filter_wrp .ui-button:hover,
-.main_title_prolific_filter_wrp .ui-button:focus {
+.main_title_prolific_filter_wrp .ui-button:focus,
+.wrp_filter_months .ui-button:hover,
+.wrp_filter_months .ui-button:focus,
+.wrp_filter_table_date .ui-button:hover,
+.wrp_filter_table_date .ui-button:focus {
   outline: none;
   color: #000;
   border: 1px solid #e6e6e6;
@@ -730,14 +736,20 @@ div {
 .prolific_analytical_categores_filter_wrp .ui-button:hover .ui-icon,
 .prolific_analytical_categores_filter_wrp .ui-button:focus .ui-icon,
 .main_title_prolific_filter_wrp .ui-button:hover .ui-icon,
-.main_title_prolific_filter_wrp .ui-button:focus .ui-icon {
+.main_title_prolific_filter_wrp .ui-button:focus .ui-icon,
+.wrp_filter_months .ui-button:hover .ui-icon,
+.wrp_filter_months .ui-button:focus .ui-icon,
+.wrp_filter_table_date .ui-button:hover .ui-icon,
+.wrp_filter_table_date .ui-button:focus .ui-icon {
   background-image: none;
 }
 
 .prolific_filter_item .ui-selectmenu-text,
 .filter_input_wrapper .ui-selectmenu-text,
 .prolific_analytical_categores_filter_wrp .ui-selectmenu-text,
-.main_title_prolific_filter_wrp .ui-selectmenu-text {
+.main_title_prolific_filter_wrp .ui-selectmenu-text,
+.wrp_filter_months .ui-selectmenu-text,
+.wrp_filter_table_date .ui-selectmenu-text {
   color: #cc003d;
   font-family: TrebuchetMSBold, sans-serif;
   font-size: 14px;
@@ -749,7 +761,9 @@ div {
 .prolific_filter_item .placeholder,
 .filter_input_wrapper .placeholder,
 .prolific_analytical_categores_filter_wrp .placeholder,
-.main_title_prolific_filter_wrp .placeholder {
+.main_title_prolific_filter_wrp .placeholder,
+.wrp_filter_months .placeholder,
+.wrp_filter_table_date .placeholder {
   color: #000;
   font-family: TrebuchetMS, sans-serif;
   vertical-align: middle;
@@ -760,7 +774,9 @@ div {
 .prolific_filter_item .ui-selectmenu-button-open,
 .filter_input_wrapper .ui-selectmenu-button-open,
 .prolific_analytical_categores_filter_wrp .ui-selectmenu-button-open,
-.main_title_prolific_filter_wrp .ui-selectmenu-button-open {
+.main_title_prolific_filter_wrp .ui-selectmenu-button-open,
+.wrp_filter_months .ui-selectmenu-button-open,
+.wrp_filter_table_date .ui-selectmenu-button-open {
   -webkit-border-radius: 3px 3px 0 0;
           border-radius: 3px 3px 0 0;
 }
@@ -768,7 +784,9 @@ div {
 .prolific_filter_item .ui-selectmenu-icon.ui-icon,
 .filter_input_wrapper .ui-selectmenu-icon.ui-icon,
 .prolific_analytical_categores_filter_wrp .ui-selectmenu-icon.ui-icon,
-.main_title_prolific_filter_wrp .ui-selectmenu-icon.ui-icon {
+.main_title_prolific_filter_wrp .ui-selectmenu-icon.ui-icon,
+.wrp_filter_months .ui-selectmenu-icon.ui-icon,
+.wrp_filter_table_date .ui-selectmenu-icon.ui-icon {
   width: 0;
   height: 0;
   background-image: none;
@@ -786,7 +804,9 @@ div {
 .prolific_filter_item .ui-selectmenu-icon.ui-icon:hover,
 .filter_input_wrapper .ui-selectmenu-icon.ui-icon:hover,
 .prolific_analytical_categores_filter_wrp .ui-selectmenu-icon.ui-icon:hover,
-.main_title_prolific_filter_wrp .ui-selectmenu-icon.ui-icon:hover {
+.main_title_prolific_filter_wrp .ui-selectmenu-icon.ui-icon:hover,
+.wrp_filter_months .ui-selectmenu-icon.ui-icon:hover,
+.wrp_filter_table_date .ui-selectmenu-icon.ui-icon:hover {
   background-image: none;
 }
 
@@ -3668,4 +3688,450 @@ div {
 .prolific_tab_worker__assessment_head,
 .prolific_tab_worker__result_test {
   display: none;
+}
+
+.prolific_tab_worker {
+  margin-bottom: 45px;
+}
+
+.prolific_map_development {
+  padding: 31px 24px 74px 24px;
+  background-color: #fff;
+}
+
+.prolific_map_development_development {
+  margin-bottom: 35px;
+}
+
+.prolific_map_development_development p {
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  color: #2f2f2f;
+}
+
+.prolific_map_development_craphic_wrp {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.prolific_map_development_craphic {
+  width: 934px;
+  height: 246px;
+  margin-left: 4px;
+  position: relative;
+  margin-top: 50px;
+}
+
+.prolific_map_development_craphic-numbar {
+  position: absolute;
+  width: 100%;
+  height: 246px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.prolific_map_development_craphic-numbar li:nth-child(2) span {
+  display: inline-block;
+  margin-left: -2px;
+}
+
+.prolific_map_development_craphic-numbar li.prolific_map_development_craphic-numbar-last {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.prolific_map_development_craphic-numbar li.prolific_map_development_craphic-numbar-last:before {
+  bottom: 0;
+  top: auto;
+}
+
+.prolific_map_development_craphic-numbar li.prolific_map_development_craphic-numbar-last span {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  -webkit-transform: translateY(50%);
+      -ms-transform: translateY(50%);
+          transform: translateY(50%);
+}
+
+.prolific_map_development_craphic-numbar .red_line {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  left: 0;
+  right: 0;
+  padding-bottom: 2px;
+  border-bottom: 3px solid #cc003d;
+  text-align: right;
+}
+
+.prolific_map_development_craphic-numbar .red_line span {
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;
+  position: relative;
+  z-index: 2;
+  font-family: PragmaticaSlabBold, sans-serif;
+  font-size: 16px;
+  color: #cc003d;
+}
+
+.prolific_map_development_craphic-numbar .red_line:before {
+  display: none;
+}
+
+.prolific_map_development_craphic-numbar li {
+  position: relative;
+  height: 20%;
+}
+
+.prolific_map_development_craphic-numbar li:after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 37px;
+  background-color: #fff;
+}
+
+.prolific_map_development_craphic-numbar li:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #e6e6e6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.prolific_map_development_craphic-numbar li span {
+  display: inline-block;
+  font-family: PragmaticaSlabExtraLight, sans-serif;
+  font-size: 20px;
+  color: #c6c6c6;
+  position: relative;
+  padding-right: 10px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 9;
+}
+
+.prolific_map_development_craphic-items {
+  position: absolute;
+  z-index: 3;
+  height: 100%;
+  left: 78px;
+  bottom: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.prolific_map_development_craphic-items .fll_opacity_blue {
+  background-color: rgba(0, 22, 137, 0.1);
+}
+
+.prolific_map_development_craphic-items .fll_pink {
+  background-color: rgba(204, 0, 61, 0.1);
+}
+
+.prolific_map_development_craphic-items li {
+  width: 75px;
+  position: relative;
+}
+
+.prolific_map_development_craphic-items li:not(:last-of-type) {
+  margin-right: 65px;
+}
+
+.prolific_map_development_craphic-items li .procent_prolific_result_test_graphic {
+  text-align: center;
+  text-transform: uppercase;
+  color: #001689;
+  line-height: 19px;
+  position: absolute;
+  top: -29px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  font-size: 24px;
+  font-family: PragmaticaSlabBold, sans-serif;
+}
+
+.prolific_map_development_craphic-items li .name_prolific_result_test_graphic {
+  text-align: center;
+  line-height: 18px;
+  position: absolute;
+  bottom: -16px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 100%);
+      -ms-transform: translate(-50%, 100%);
+          transform: translate(-50%, 100%);
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  color: #a1a4c8;
+  text-transform: uppercase;
+}
+
+.prolific_map_development_development_title {
+  color: #c6c6c6;
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  margin-bottom: -16px;
+}
+
+.prolific_map_development_wrp {
+  margin-bottom: 45px;
+}
+
+.prolific_plan_schedule {
+  background-color: #fff;
+  padding: 30px;
+}
+
+.wrp_filter_months {
+  margin-bottom: 20px;
+}
+
+.wrp_filter_months .ui-selectmenu-button.ui-button {
+  width: 245px;
+}
+
+.prolific_plan_schedule_functions {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 19px;
+}
+
+.prolific_plan_schedule_functions .print_out {
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
+}
+
+.prolific_plan_schedule_functions .print_out_btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+
+.prolific_plan_schedule_functions .print_out_btn img {
+  margin-right: 8px;
+}
+
+.prolific_plan_schedule_functions .print_out_btn span {
+  font-size: 14px;
+  color: #001689;
+  text-decoration: underline;
+}
+
+.prolific_plan_schedule_functions_btn li {
+  display: inline-block;
+}
+
+.prolific_plan_schedule_functions_btn li:not(:last-of-type) {
+  margin-right: 11px;
+}
+
+.prolific_plan_schedule_functions_btn li:first-child button {
+  padding: 12px 27px;
+}
+
+.prolific_plan_schedule_functions_btn li button {
+  outline: none;
+  padding: 12px 48px;
+  background-color: #001689;
+  color: #fff;
+  font-size: 14px;
+  -webkit-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+
+.prolific_plan_schedule_functions_btn li button:hover {
+  background-color: #1D34AD;
+}
+
+.table_plan {
+  width: 100%;
+}
+
+.table_plan td {
+  border: 1px solid #e6e6e6;
+  padding: 19px 0;
+}
+
+.table_plan thead td {
+  text-align: center;
+  font-size: 13px;
+  color: #a1a4c8;
+  text-transform: uppercase;
+  padding: 17px 0 15px 0;
+}
+
+.table_plan tbody tr td:not(:first-of-type) {
+  text-align: center;
+}
+
+.table_plan .table_plan_text {
+  font-family: ArialMT, sans-serif;
+  padding: 19px 11px 17px 11px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.table_plan .table_plan_remove a {
+  text-decoration: underline;
+  font-family: TrebuchetMS, sans-serif;
+  font-size: 14px;
+  color: #001689;
+}
+
+.wrp_filter_table_date .ui-selectmenu-button.ui-button {
+  width: 112px;
+  height: 32px;
+  line-height: 32px;
+}
+
+.wrp_filter_table_date .ui-selectmenu-text {
+  color: #000;
+  font-size: 14px;
+  font-weight: normal;
+  font-family: ArialMT, sans-serif;
+}
+
+.wrp_filter_table_date .ui-selectmenu-icon.ui-icon {
+  right: 8px;
+}
+
+.table_checkbox {
+  display: none;
+}
+
+.custom_table_checkbox {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  border: 1px solid #dadada;
+  background-color: #ffffff;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
+.table_checkbox:checked + .custom_table_checkbox:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/icons/tick-sign.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.table_checkbox:checked + .custom_table_checkbox {
+  background-color: #cc003d;
+}
+
+.wrp_creat_new_plan_btn button {
+  outline: none;
+  text-align: right;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  margin-top: 18px;
+  margin-left: auto;
+}
+
+.wrp_creat_new_plan_btn button img {
+  margin-right: 8px;
+}
+
+.wrp_creat_new_plan_btn button span {
+  font-size: 14px;
+  color: #001689;
+  text-decoration: underline;
+}
+
+.prolific_plan_schedule_result {
+  margin-bottom: 30px;
+}
+
+.prolific_plan_schedule_result ul li:not(:last-of-type) {
+  margin-bottom: 16px;
+}
+
+.prolific_plan_schedule_result ul li p {
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin-bottom: 5px;
+}
+
+.prolific_plan_schedule_result ul li a {
+  font-family: ArialMT, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  color: #001689;
+  line-height: 24px;
+  text-decoration: none;
 }
