--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1844,7 +1844,7 @@ div
 				font-size: 16px
 				color: #a4a4bb
 
-.prolific_tab_worker__categories
+.prolific_tab_worker__categories_flex
 	display: flex
 	justify-content: space-between
 
@@ -1854,6 +1854,8 @@ div
 
 .prolific_tab_worker_content
 	background-color: #fff
+	&>div
+		display: none
 
 .prolific_tab_worker__categories_left
 	width: 827px
@@ -2325,11 +2327,6 @@ div
 		line-height: 24px
 		color: #000
 
-.prolific_tab_worker__effectivenessy,
-.prolific_tab_worker__assessment_head,
-.prolific_tab_worker__result_test
-	display: none
-
 .prolific_tab_worker
 	margin-bottom: 45px
 
@@ -2632,3 +2629,180 @@ div
 
 .prolific_your_result
 	margin-bottom: 45px
+
+.prolific_your_result_items
+	display: flex
+	flex-wrap: wrap
+
+.prolific_your_result_item
+	display: flex
+	align-items: center
+	flex-wrap: wrap
+	width: 456px
+	margin-bottom: 35px
+	&__img
+		width: 92px
+		height: 92px
+		background-color: #adadfa
+		border-radius: 50%
+		display: flex
+		align-items: center
+		justify-content: center
+		margin-right: 14px
+	&__info
+		p
+			font-family: TrebuchetMS, sans-serif
+			font-size: 14px
+			color: #a2a2a2
+			margin-bottom: 5px
+		span
+			color: $red
+			font-family: PragmaticaSlabBold, sans-serif
+			font-size: 18px
+		.numbar
+			font-size: 30px
+
+.prolific_tab_worker__effectivenessy_second_graphic
+	height: 490px
+	position: relative
+	margin-left: 3px
+	&-numbar
+		position: absolute
+		width: 100%
+		height: 490px
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+		bottom: 0
+		left: 0
+		right: 0
+		li.prolific_tab_worker__effectivenessy_second_graphic-numbar-last
+			position: absolute
+			bottom: 0
+			left: 0
+			right: 0
+			&:before
+				bottom: 0
+				top: auto
+			span
+				position: absolute
+				bottom: 0
+				left: 0
+				transform: translateY(50%)
+		li
+			position: relative
+			height: 10%
+			&:after
+				content: ''
+				display: block
+				position: absolute
+				left: 0
+				top: 0
+				bottom: 0
+				height: 100%
+				width: 42px
+				background-color: #fff
+			&:before
+				content: ''
+				display: block
+				width: 100%
+				height: 1px
+				background-color: #e6e6e6
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+			span
+				display: inline-block
+				font-family: PragmaticaSlabExtraLight, sans-serif
+				font-size: 20px
+				color: #c6c6c6
+				position: relative
+				padding-right: 10px
+				transform: translateY(-50%)
+				z-index: 9
+				width: 42px
+				border-box: content-box
+				text-align: right
+
+.prolific_tab_worker__effectivenessy_second_graphic-items
+	position: absolute
+	z-index: 3
+	height: 350px
+	width: calc(100% - 40px)
+	left: 42px
+	bottom: 0
+	right: 0
+	display: flex
+	align-items: flex-end
+	padding-left: 92px !important
+	.fll_opacity_blue
+		background-color: rgba(0, 22, 137, 0.1)
+	.fll_pink
+		background-color: rgba(204,0,61,.1)
+	.red_line
+		position: absolute
+		width: 100%
+		height: auto
+		left: 0
+		right: 0
+		padding-bottom: 2px 
+		border-bottom: 3px solid $red
+		text-align: right
+		span
+			padding-right: 0
+			transform: none
+			position: relative
+			z-index: 2
+			font-family: PragmaticaSlabBold, sans-serif
+			font-size: 16px
+			color: $red
+	li
+		width: 85px
+		position: relative
+		&:not(:last-of-type)
+			margin-right: 91px
+		.procent_prolific_result_test_graphic
+			text-align: center
+			text-transform: uppercase
+			color: #001689
+			line-height: 19px
+			position: absolute
+			top: -15px
+			left: 50%
+			transform: translate(-50%, -100%)
+			font-size: 24px
+			font-family: PragmaticaSlabBold, sans-serif
+		.name_prolific_result_test_graphic
+			text-align: center
+			line-height: 18px
+			position: absolute
+			bottom: -20px
+			left: 50%
+			transform: translate(-50%, 100%)
+			font-family: ArialMT, sans-serif
+			font-size: 12px
+			color: #c6c6c6
+			width: 94px
+
+.prolific_tab_worker__effectivenessy_second
+	padding: 48px 48px 72px 26px
+
+.prolific_tab_worker__effectivenessy_second_flex
+	display: flex
+	justify-content: space-between
+
+.prolific_tab_worker__effectivenessy_second_left
+	width: 840px
+	.prolific_tab_worker__result_test_left_title
+		font-family: ArialMT, sans-serif
+		font-size: 14px
+		line-height: 18px
+		color: #c6c6c6
+		text-align: center
+		display: block
+		width: 50px
+		position: relative
+		z-index: 5
+		margin-top: -3px
+		margin-bottom: 32px
