--- a/sass/main.sass
+++ b/sass/main.sass
@@ -721,6 +721,7 @@ div
 
 .filter_input_wrapper
 	position: relative
+	height: 41px
 	input
 		outline: none
 		width: 100%
@@ -734,9 +735,9 @@ div
 		color: #000
 		&::placeholder
 			color: #b1b1b1
-	button
-		outline: none
+	.btn_submit_filter
 		position: absolute
+		cursor: pointer
 		right: 9px
 		top: 50%
 		transform: translateY(-50%)
@@ -1894,7 +1895,7 @@ div
 
 .prolific_tab_worker__categories_craphic_items
 	display: flex
-	margin-left: 200px
+	margin-left: 162px
 
 .prolific_tab_worker__categories_craphic_item
 	width: 150px
@@ -2558,7 +2559,7 @@ div
 	.ui-selectmenu-button.ui-button
 		width: 112px
 		height: 32px
-		line-height: 32px
+		line-height: 27px
 	.ui-selectmenu-text
 		color: #000
 		font-size: 14px
